[project]
name = "gsm8k-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "trl>=1.6.0",
    "wandb>=0.27.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" }
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
